2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/ibmrs6000.h (LD_SWITCH_SITE): Remove.

	* image.c:
	* nsfns.m:
	* nsselect.m:
	* nsterm.h:
	* nsterm.m: Rename ns prefixed functions/variables to the
	corresponding x versions.  Update references.

	* m/ibms390x.h (NO_REMAP): Do not undefine.

	* m/amdx86-64.h: Use SOLARIS2 instead of sun.

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m: Change NS to Nextstep in docstrings and error messages.
	(Fns_create_frame, Fns_read_file_name, Fns_get_resource)
	(Fns_set_resource, Fns_set_alpha, Fns_server_max_request_size)
	(Fns_server_vendor, Fns_server_version, Fns_display_screens)
	(Fns_display_mm_height, Fns_display_mm_width)
	(Fns_display_backing_store, Fns_display_visual_class)
	(Fns_display_save_under, Fns_open_connection)
	(Fns_close_connection, Fns_hide_emacs, Fns_font_name)
	(Fns_list_colors, Fns_perform_service, Fns_color_defined_p)
	(Fns_color_values, Fxw_display_color_p, Fx_display_grayscale_p)
	(Fns_display_pixel_width, Fns_display_pixel_height)
	(Fns_display_usable_bounds, Fx_display_planes)
	(Fns_display_color_cells, Vns_icon_type_alist): Doc fixes.

2008-07-21  Ami Fischman  <ami@fischman.org>  (tiny change)

	* print.c (print_object): Check print_depth before searching for
	circularities.

2008-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (Fdbus_register_signal): Use sprintf + strcat instead
	only sprintf.

2008-07-21  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (adjust_anchor): Check if DetalValue is not NULL.

2008-07-20  Andreas Schwab  <schwab@suse.de>

	* syntax.c (find_start_pos, find_start_value)
	(find_start_value_byte, find_start_begv, find_defun_start)
	(back_comment, scan_sexps_forward): Use EMACS_INT for buffer
	positions.

2008-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/sol2-3.h: Insert contents of s/sol2.h.
	(LD_SWITCH_SYSTEM): Remove redundant definition.
	* s/sol2.h: Remove, unused.

2008-07-20  Adrian Robert  <Adrian.B.Robert@gmail.com>
